{
    "name": "InputActions",
    "maps": [
        {
            "name": "MovementPlayer",
            "id": "a6e46428-a0ef-4770-b79f-ad3c93549021",
            "actions": [
                {
                    "name": "Translate",
                    "type": "Value",
                    "id": "26092173-8d6a-4f1e-9e60-674f662e435f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "Horizontal",
                    "id": "eb093634-4146-4da7-9882-10adc177fe91",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e52dc773-c09a-48c9-ba3b-127821d0f903",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ff3ea04a-0aa6-4ce1-b613-e1fa04a7318a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Translate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Recording",
            "id": "f8da6e35-53f4-4659-a334-7368b5965240",
            "actions": [
                {
                    "name": "ToggleRecording",
                    "type": "Value",
                    "id": "e0fddee7-8360-4491-a6d0-7692646bdc2e",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02c1b589-e2f9-456d-95ee-5073318863e9",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToggleRecording",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GhostSpawn",
            "id": "ed7ee43e-069c-4125-9256-ba7ab78806f4",
            "actions": [
                {
                    "name": "Spawn",
                    "type": "Button",
                    "id": "8897afa0-bfd8-47ef-99ad-0da56ec9b07c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "473da649-33fd-4d02-89a5-09d2d3c0b334",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Spawn",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}